# one-wip

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  ui.rs
src/database/: database.rs
src/task_manager/: task.rs
src/tui/: app.rs  board.rs  mod.rs  task_input.rs  task_list.rs
