[package]
name = "one-wip"
version = "0.1.1"
edition = "2021"
description = "A tui kanban board that allows only one item in doing"
license = "MIT"

[[bin]]
edition = "2021"
name = "ow"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
crossterm = '0.26.1'
ratatui = "0.21.0"
